add skills section

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         veritatis quod illo dolore deleniti labore sed. Inventore nulla ipsum sit?</p>
     </section>
     <section class="block">
-      <h2 class="block__header">Стек технологий<span>что уже выучил</span></h2>
-      <ul class="block__list">
+      <h2 class="block__header">Стек технологий<span>знаю, умею, практикую</span></h2>
+      <ol class="block__ordered-list">
         <li class="block__item">
           <h3 class="block__item-header">HTML5</h3>
           <p class="block__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolor
@@ -91,6 +91,29 @@
             impedit excepturi mollitia nemo delectus dolorem eaque numquam!Velit quidem, sequi fuga eaque fugit
             accusamus error molestias deserunt veritatis, nemo dicta quia ex? Ipsam quia totam voluptate eaque sunt
             ratione iste ipsa qui, harum quasi culpa consectetur blanditiis!</p>
+        </li>
+      </ol>
+    </section>
+    <section class="block">
+      <h2 class="block__header">Умения<span>профессиональные навыки</span></h2>
+      <ul class="block__unordered-list">
+        <li class="block__ul-item">
+          <span>30%</span>Git
+        </li>
+        <li class="block__ul-item">
+          <span>60%</span>Adobe Photoshop
+        </li>
+        <li class="block__ul-item">
+          <span>40%</span>Gulp
+        </li>
+        <li class="block__ul-item">
+          <span>20%</span>jQuery
+        </li>
+        <li class="block__ul-item">
+          <span>30%</span>Bootstrap
+        </li>
+        <li class="block__ul-item">
+          <span>10%</span>React
         </li>
       </ul>
     </section>
