--- a/index.html
+++ b/index.html
@@ -12,36 +12,38 @@
 <body>
   <header class="header">
     <img class="header__photo" srcset="AndreySychev@0,5x.jpg 1x, AndreySychev.jpg 2x" alt="Моя фотография">
-    <div class="header__description">
-      <h1 class="header__credentials">Андрей Сычев</h1>
-      <div class="contacts">
-        <h2 class="contacts__header visually-hidden">Контакты</h2>
-        <ul class="contacts__list">
-          <li class="contacts__item">
-            <div class="contacts__container">
-              <h3 class="contacts__lable">Местонахождение</h3>
-              <p class="contacts__description">Россия, г. Сочи</p>
-            </div>
-          </li>
-          <li class="contacts__item">
-            <div class="contacts__container">
-              <h3 class="contacts__lable">Веб-сайт</h3>
-              <a class="contacts__description" href="https://devsway.ru">devsway.ru</a>
-            </div>
-          </li>
-          <li class="contacts__item">
-            <div class="contacts__container">
-              <h3 class="contacts__lable">Телефон</h3>
-              <a class="contacts__description" href="tel:+79996503694">+79996502694</a>
-            </div>
-          </li>
-          <li class="contacts__item">
-            <div class="contacts__container">
-              <h3 class="contacts__lable">Электронная почта</h3>
-              <a class="contacts__description" href="mailto:andrey.sychev.90@gmail.com">andrey.sychev.90@gmail.com</a>
-            </div>
-          </li>
-        </ul>
+    <div class="desktop-container">
+      <h1 class="header__credentials">Андрей<br> Сычёв</h1>
+      <div class="header__description">
+        <div class="contacts">
+          <h2 class="contacts__header visually-hidden">Контакты</h2>
+          <ul class="contacts__list">
+            <li class="contacts__item">
+              <div class="contacts__container">
+                <h3 class="contacts__lable">Местонахождение</h3>
+                <p class="contacts__description">Россия, г. Сочи</p>
+              </div>
+            </li>
+            <li class="contacts__item">
+              <div class="contacts__container">
+                <h3 class="contacts__lable">Веб-сайт</h3>
+                <a class="contacts__description" href="https://devsway.ru">devsway.ru</a>
+              </div>
+            </li>
+            <li class="contacts__item">
+              <div class="contacts__container">
+                <h3 class="contacts__lable">Телефон</h3>
+                <a class="contacts__description" href="tel:+79996503694">+79996502694</a>
+              </div>
+            </li>
+            <li class="contacts__item">
+              <div class="contacts__container">
+                <h3 class="contacts__lable">Электронная почта</h3>
+                <a class="contacts__description" href="mailto:andrey.sychev.90@gmail.com">andrey.sychev.90@gmail.com</a>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </header>
@@ -61,7 +63,7 @@
       <h2 class="block__header">Стек технологий<span>знаю, умею, практикую</span></h2>
       <ol class="block__ordered-list">
         <li class="block__item">
-          <h3 class="block__item-header">HTML5</h3>
+          <h3 data-number="01 " class="block__item-header">HTML5</h3>
           <p class="block__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolor
             blanditiis voluptatibus. Saepe, perferendis vitae eum tempora ipsa laudantium officiis quis, eligendi
             impedit excepturi mollitia nemo delectus dolorem eaque numquam!Velit quidem, sequi fuga eaque fugit
@@ -69,7 +71,7 @@
             ratione iste ipsa qui, harum quasi culpa consectetur blanditiis!</p>
         </li>
         <li class="block__item">
-          <h3 class="block__item-header">CSS3</h3>
+          <h3 data-number="02 " class="block__item-header">CSS3</h3>
           <p class="block__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolor
             blanditiis voluptatibus. Saepe, perferendis vitae eum tempora ipsa laudantium officiis quis, eligendi
             impedit excepturi mollitia nemo delectus dolorem eaque numquam!Velit quidem, sequi fuga eaque fugit
@@ -77,7 +79,7 @@
             ratione iste ipsa qui, harum quasi culpa consectetur blanditiis!</p>
         </li>
         <li class="block__item">
-          <h3 class="block__item-header">JavaScript</h3>
+          <h3 data-number="03 " class="block__item-header">JavaScript</h3>
           <p class="block__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolor
             blanditiis voluptatibus. Saepe, perferendis vitae eum tempora ipsa laudantium officiis quis, eligendi
             impedit excepturi mollitia nemo delectus dolorem eaque numquam!Velit quidem, sequi fuga eaque fugit
@@ -85,7 +87,7 @@
             ratione iste ipsa qui, harum quasi culpa consectetur blanditiis!</p>
         </li>
         <li class="block__item">
-          <h3 class="block__item-header">LESS</h3>
+          <h3 data-number="04 " class="block__item-header">LESS</h3>
           <p class="block__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolor
             blanditiis voluptatibus. Saepe, perferendis vitae eum tempora ipsa laudantium officiis quis, eligendi
             impedit excepturi mollitia nemo delectus dolorem eaque numquam!Velit quidem, sequi fuga eaque fugit
@@ -98,26 +100,28 @@
       <h2 class="block__header">Умения<span>профессиональные навыки</span></h2>
       <ul class="block__unordered-list">
         <li class="block__ul-item">
-          <span>30%</span>Git
+          <span>30%</span><p>Git</p>
         </li>
         <li class="block__ul-item">
-          <span>60%</span>Adobe Photoshop
+          <span>60%</span><p>Adobe<br> Photoshop</p>
         </li>
         <li class="block__ul-item">
-          <span>40%</span>Gulp
+          <span>40%</span><p>Gulp</p>
         </li>
         <li class="block__ul-item">
-          <span>20%</span>jQuery
+          <span>20%</span><p>jQuery</p>
         </li>
         <li class="block__ul-item">
-          <span>30%</span>Bootstrap
+          <span>30%</span><p>Bootstrap</p>
         </li>
         <li class="block__ul-item">
-          <span>10%</span>React
+          <span>10%</span><p>React</p>
         </li>
       </ul>
     </section>
   </main>
+  <div id="arrow"></div>
+  <script src="script.js"></script>
 </body>
 
 </html>
