redesign page add IT-calendar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>Andrey Sychev: resume</title>
+  <title>Andrey Sychev: portfolio</title>
 </head>
 
 <body>
@@ -21,13 +21,7 @@
             <li class="contacts__item">
               <div class="contacts__container">
                 <h3 class="contacts__lable">Местонахождение</h3>
-                <p class="contacts__description">Россия, г. Сочи</p>
-              </div>
-            </li>
-            <li class="contacts__item">
-              <div class="contacts__container">
-                <h3 class="contacts__lable">Веб-сайт</h3>
-                <a class="contacts__description" href="https://devsway.ru">devsway.ru</a>
+                <p class="contacts__description">Россия, г. Казань</p>
               </div>
             </li>
             <li class="contacts__item">
@@ -50,74 +44,24 @@
   <main>
     <section class="block">
       <h2 class="block__header">Вступление<span>пара слов о себе</span></h2>
-      <p class="block__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, commodi a. Quidem
-        suscipit quibusdam tenetur exercitationem quisquam dolor! Repellendus tempora reiciendis nobis quod suscipit,
-        saepe necessitatibus a alias ipsam maxime!
-        Nulla, sequi quisquam similique laudantium est rerum enim repudiandae cupiditate nemo labore exercitationem
-        recusandae deleniti tempore fuga eaque velit saepe voluptatum sed quasi? Quia voluptas quod eveniet ipsa non
-        laborum?
-        Exercitationem id quae esse ratione error vel animi culpa ut iste aliquam et aut porro excepturi rerum, ea saepe
-        veritatis quod illo dolore deleniti labore sed. Inventore nulla ipsum sit?</p>
+      <p class="block__description">С этой странички начался мой путь в веб-разработку. Я решил не рубить её на корню, но немного переориентировать.
+	  Раньше тут находилось моё "резюме", а теперь я планирую собирать здесь всякие штуки, сделанные мною. Своего рода портфолио. Но идея не состоит в том,
+	  чтобы собрать тут лучшие работы, которые продемонстрируют мои сильные качества как разработчика. Идея в том, чтобы собрать здесь те работы, которые
+	  будут полезны другим</p>
     </section>
     <section class="block">
-      <h2 class="block__header">Стек технологий<span>знаю, умею, практикую</span></h2>
+      <h2 class="block__header">Мои работы<span>как могу</span></h2>
       <ol class="block__ordered-list">
         <li class="block__item">
-          <h3 data-number="01 " class="block__item-header">HTML5</h3>
-          <p class="block__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolor
-            blanditiis voluptatibus. Saepe, perferendis vitae eum tempora ipsa laudantium officiis quis, eligendi
-            impedit excepturi mollitia nemo delectus dolorem eaque numquam!Velit quidem, sequi fuga eaque fugit
-            accusamus error molestias deserunt veritatis, nemo dicta quia ex? Ipsam quia totam voluptate eaque sunt
-            ratione iste ipsa qui, harum quasi culpa consectetur blanditiis!</p>
-        </li>
-        <li class="block__item">
-          <h3 data-number="02 " class="block__item-header">CSS3</h3>
-          <p class="block__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolor
-            blanditiis voluptatibus. Saepe, perferendis vitae eum tempora ipsa laudantium officiis quis, eligendi
-            impedit excepturi mollitia nemo delectus dolorem eaque numquam!Velit quidem, sequi fuga eaque fugit
-            accusamus error molestias deserunt veritatis, nemo dicta quia ex? Ipsam quia totam voluptate eaque sunt
-            ratione iste ipsa qui, harum quasi culpa consectetur blanditiis!</p>
-        </li>
-        <li class="block__item">
-          <h3 data-number="03 " class="block__item-header">JavaScript</h3>
-          <p class="block__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolor
-            blanditiis voluptatibus. Saepe, perferendis vitae eum tempora ipsa laudantium officiis quis, eligendi
-            impedit excepturi mollitia nemo delectus dolorem eaque numquam!Velit quidem, sequi fuga eaque fugit
-            accusamus error molestias deserunt veritatis, nemo dicta quia ex? Ipsam quia totam voluptate eaque sunt
-            ratione iste ipsa qui, harum quasi culpa consectetur blanditiis!</p>
-        </li>
-        <li class="block__item">
-          <h3 data-number="04 " class="block__item-header">LESS</h3>
-          <p class="block__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolor
-            blanditiis voluptatibus. Saepe, perferendis vitae eum tempora ipsa laudantium officiis quis, eligendi
-            impedit excepturi mollitia nemo delectus dolorem eaque numquam!Velit quidem, sequi fuga eaque fugit
-            accusamus error molestias deserunt veritatis, nemo dicta quia ex? Ipsam quia totam voluptate eaque sunt
-            ratione iste ipsa qui, harum quasi culpa consectetur blanditiis!</p>
+          <h3 data-number="01 " class="block__item-header">Календарь конференций</h3>
+          <p class="block__item-description">Я давно искал такой сайт, где в одном месте были бы собраны все IT-конференции.
+		  И тут я наткнулся на репозиторий Веб-стандартов, где увидел календарь с интернет-конференциями. Ребята предоставили очень удобный json файл, 
+		  в котором были собраны прошедшие и будущие события. В то же время я хотел попрактиковаться с CSS Grid Layout, потому что изучил гриды уже более 
+		  полугода назад, но верстал все время на флексах и тему подзабыл. Было решено сверстать небольшой сайтик, на котором бы можно было визуально
+		  отсмотреть все предстоящие события. В планах также было подгружать картинку в зависимости от города проведения, но оказалось, что Google Places API платный :)</p>
+		  <a href="/IT-calendar/calendar.html">Смотреть работу</a>
         </li>
       </ol>
-    </section>
-    <section class="block">
-      <h2 class="block__header">Умения<span>профессиональные навыки</span></h2>
-      <ul class="block__unordered-list">
-        <li class="block__ul-item">
-          <span>30%</span><p>Git</p>
-        </li>
-        <li class="block__ul-item">
-          <span>60%</span><p>Adobe<br> Photoshop</p>
-        </li>
-        <li class="block__ul-item">
-          <span>40%</span><p>Gulp</p>
-        </li>
-        <li class="block__ul-item">
-          <span>20%</span><p>jQuery</p>
-        </li>
-        <li class="block__ul-item">
-          <span>30%</span><p>Bootstrap</p>
-        </li>
-        <li class="block__ul-item">
-          <span>10%</span><p>React</p>
-        </li>
-      </ul>
     </section>
   </main>
   <div id="arrow"></div>
