--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		  в котором были собраны прошедшие и будущие события. В то же время я хотел попрактиковаться с CSS Grid Layout, потому что изучил гриды уже более 
 		  полугода назад, но верстал все время на флексах и тему подзабыл. Было решено сверстать небольшой сайтик, на котором бы можно было визуально
 		  отсмотреть все предстоящие события. В планах также было подгружать картинку в зависимости от города проведения, но оказалось, что Google Places API платный :)</p>
-		  <a href="/IT-calendar/calendar.html">Смотреть работу</a>
+		  <a class="block__link" href="/IT-calendar/calendar.html">Смотреть работу</a>
         </li>
       </ol>
     </section>
