add kitty drum kit

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
 		  отсмотреть все предстоящие события. В планах также было подгружать картинку в зависимости от города проведения, но оказалось, что Google Places API платный :)</p>
 		  <a class="block__link" href="/IT-calendar/calendar.html">Смотреть работу</a>
         </li>
+        <li class="block__item">
+          <h3 data-number="01 " class="block__item-header">Kitty Drum Kit</h3>
+          <p class="block__item-description">Сидел я такой, было мне скучно и решил я сделать что-то забавное. Да, мы очень любим нашу кошку.</p>
+          <a class="block__link" href="/kitty-drum-kit/index.html">Смотреть работу</a>
+        </li>
       </ol>
     </section>
   </main>
