--- a/kitty-drum-kit/index.html
+++ b/kitty-drum-kit/index.html
@@ -13,7 +13,7 @@
   </h1>
   <p class="about">
     This is our cat. Her name is Elfa or Princess, if u wish.
-    And this is a sounds that she make. I exctracted them from a couple of videos. Now I realize that I should record her especially for this purpose. So, if u like the idea, stay tuned and wait for Kitty Drum Kit version 2.
+    And this is a sounds that she makes. I exctracted them from a couple of videos. Now I realize that I should record her especially for this purpose. So, if u like the idea, stay tuned and wait for Kitty Drum Kit version 2.
   </p>
   <section class="drum-kit">
     <div class="key" data-key="KeyA">
