IT-calendar: add city search feature

--- a/IT-calendar/calendar.html
+++ b/IT-calendar/calendar.html
@@ -15,18 +15,23 @@
   <body>
     <header> 
 		<div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <h1 class="display-4">Web-конференции в России</h1>
-                <p class="lead">Здесь представлен календарь прошедших и запланированных событий в мире интернета и веб-разработки. <br>
-				<a href="https://github.com/web-standards-ru/calendar" target="_blank"> Информация представлена Веб-стандартами.</a></p>
-            </div>
-			
-        </div>
+      <div class="container">
+        <h1 class="display-4">Web-конференции в России</h1>
+        <p class="lead">Здесь представлен календарь прошедших и запланированных событий в мире интернета и веб-разработки. <br>
+        <a href="https://github.com/web-standards-ru/calendar" target="_blank"> Информация представлена Веб-стандартами.</a></p>
+      </div>
+    </div>
+    <div class="input-group mb-4">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="city-search">Поиск по названию города</span>
+      </div>
+      <input type="text" class="form-control search" id="city-search-input" placeholder="Введите название города" aria-label="Город" aria-describedby="city-search">
+    </div>
 	</header>
 	<main>
 		<section class="calendar-grid">
 				
-			</section>
+    </section>
 	</main>
 	<script src="./script.js"></script>
   </body>
